--- a/frontend/src/components/Footer/Footer.scss
+++ b/frontend/src/components/Footer/Footer.scss
@@ -75,23 +75,59 @@
         font-weight: 600;
       }
 
-      li {
+      li, .phone, .email {
         &:hover {
           transform: translateX(10px);
 
-          a {
+          a, Link {
             color: var(--PrimaryColor);
           }
         }
-
       }
 
-      a {
+      a, .phone, .email, Link {
         color: white;
         font-family: 'Oswald';
         font-size: 13px;
         font-weight: 400;
       }
+
+      .phone, .email {
+        &:hover {
+          color: var(--PrimaryColor);
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 448px) {
+  .footer {
+    .sec-container {
+      grid-template-columns: repeat(2, 1fr);
+      text-align: center;
+      align-items: flex-start;
+  
+      .footer-links {
+        justify-content: center;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 640px) {
+  .footer {
+    .sec-container {
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .footer {
+    .sec-container {
+      padding: 2rem;
+      grid-template-columns: repeat(3, 1fr);
     }
   }
 }
