Finalized Home Page. Fixed the connections of webpages using Router. Added Food page.

--- a/frontend/src/components/HotelResorts/HotelResort.scss
+++ b/frontend/src/components/HotelResorts/HotelResort.scss
@@ -173,6 +173,7 @@
 
               .brand-name {
                 font-family: 'Newsreader';
+                font-size: 10px;
               }
             }
           }
