--- a/frontend/src/components/Home/Home.scss
+++ b/frontend/src/components/Home/Home.scss
@@ -33,6 +33,7 @@
         font-size: 2rem;
         font-weight: 500;
         font-family: 'Newsreader';
+        animation: fadeIn 3s;
 
         .brand-name {
           font-family: 'Newsreader';
@@ -47,6 +48,7 @@
         font-size: 15px;
         font-weight: 300;
         padding: 1rem 0;
+        animation: fadeIn 3s;
 
         .brand-name {
           font-family: 'Newsreader';
