--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,3 +14,17 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.app {
+  width: 80%;
+  margin: auto;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
