--- a/frontend/src/components/RoomHeader/RoomHeader.scss
+++ b/frontend/src/components/RoomHeader/RoomHeader.scss
@@ -12,11 +12,13 @@
   --whiteColorDeam: hsl(0, 0%, 93%);
   --inputColor: hsl(330, 12%, 97%);
   // box-shadow: 0 2px 8px 2px rgba(178, 178, 178, 0.334);
+  // linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%)
+  // linear-gradient(rgba(33, 33, 33, 0.522), rgba(33, 33, 33, 0.522))
 }
 
-.food-section {
+.room-section {
   height: 50vw;
-  background: linear-gradient(rgba(33, 33, 33, 0.522), rgba(33, 33, 33, 0.522)), url(../../assets/hotel_garden.jpg) no-repeat center;
+  background: linear-gradient(rgba(33, 33, 33, 0.522), rgba(33, 33, 33, 0.522) 75%, rgba(255,255,255,1) 100%), url(../../assets/room_header.jpg) no-repeat center;
   background-size: cover;
   // background-position: center;
   // background-repeat: no-repeat;
