--- a/frontend/src/components/FoodContent/FoodContent.scss
+++ b/frontend/src/components/FoodContent/FoodContent.scss
@@ -11,12 +11,11 @@
   --whiteColorDeam: hsl(0, 0%, 93%);
   --inputColor: hsl(330, 12%, 97%);
   // box-shadow: 0 2px 8px 2px rgba(178, 178, 178, 0.334);
-  
 }
 
 .food-menu {
-  padding-top: 3rem;
-  padding-left: .2rem;
+  padding: 3rem 0 0;
+  // padding-top: 3rem;
 
   .section-container {
     .section-header {
@@ -47,15 +46,16 @@
     .main-content {
       padding: 2rem 0;
       gap: 2rem;
-        
+      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+      
       .food-items {
         overflow: hidden;
         border-radius: 1rem;
-        box-shadow: 0 2px 8px 2px rgba(178, 178, 178, 0.334);
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+        // box-shadow: 0 2px 8px 2px rgba(178, 178, 178, 0.334);
 
         .food-image {
-          width: 100%;
-            
+          width: 100%;     
           height: 40vh;
           position: relative;
           overflow: hidden;
@@ -67,7 +67,56 @@
           }
 
           .food-info {
+            position: absolute;
+            display: flex;
+            align-items: flex-start;
+            padding: 0;
+            justify-content: center;
+            flex-direction: column;
+            background: linear-gradient(rgba(0, 0, 0, 0.846), rgba(0, 0, 0, 0.759));
+            bottom: 0;
+            width: 100%;
+            height: 0;
+            overflow: hidden;
 
+            h4 {
+              color: white;
+              font-family: 'Oswald';
+              font-weight: 600;
+            }
+
+            p {
+              color: white;
+              font-family: 'Oswald';
+              opacity: .7;
+            }
+
+            .icon {
+              position: absolute;
+              right: 10px;
+              bottom: 10px;
+              padding: .5rem;
+              background: var(--PrimaryColor);
+              font-size: 2.5rem;
+              border-radius: 50%;
+              color: var(--blackColor);
+              border: 1px solid var(--PrimaryColor);
+              transition: .3s ease;
+
+              &:hover {
+                background: var(--blackColor);
+                border: 1px solid var(--PrimaryColor);
+                color: var(--PrimaryColor);
+              }
+            }
+          }
+
+          &:hover {
+            .food-info {
+              overflow: visible;
+              padding: 1rem 1.5rem;
+              height: 100%;
+            }
           }
         }
       }
