--- a/frontend/src/components/LoginForm/LoginForm.scss
+++ b/frontend/src/components/LoginForm/LoginForm.scss
@@ -13,10 +13,6 @@
 }
 
 .login-container {  
-  background: linear-gradient(rgba(33, 33, 33, 0.522), rgba(33, 33, 33, 0.522)), no-repeat center;
-  background-size: cover;
-  transition: background-image 1s ease-in-out;
-
   .wrapper {
     justify-content: center;
     min-height: 100vh;
@@ -127,7 +123,7 @@
         text-align: center;
         color: white;
 
-        a {
+        a, Link {
           color: white;;
           font-weight: 600;
 
