--- a/frontend/src/components/RegistrationForm/RegistrationForm.scss
+++ b/frontend/src/components/RegistrationForm/RegistrationForm.scss
@@ -63,6 +63,10 @@
         color: white;
       }
 
+      p {
+        color: white;
+      }
+
       .input-box {
         position: relative;
         width: 100%;
@@ -96,6 +100,7 @@
         border-radius: 40px;
         font-weight: 700;
         font-size: 15px;
+        margin-top: 15px;
       }
 
       .login-link {
