Implementations of User Registration, and Login Page

--- a/frontend/src/components/UserDropdown/UserDropdown.scss
+++ b/frontend/src/components/UserDropdown/UserDropdown.scss
@@ -21,6 +21,10 @@
     padding: 10px 0;
     z-index: 1000;
 
+    .username {
+      padding: 0px 15px;
+    }
+
     .dropdown-item {
       padding: 10px 15px;
       color: black;
