It is now booking. Styling of Booking Page is to be fix later

--- a/frontend/src/pages/BookNowButton/BookNowButton.scss
+++ b/frontend/src/pages/BookNowButton/BookNowButton.scss
@@ -32,7 +32,7 @@
     transform: scale(0.9);
     animation: fadeInScale 0.3s ease-in-out forwards;
 
-    .step-1, .step-2, .step-3 {
+    .form-style, .step-1 {
       label {
         display: block;
         margin: 10px 0;
